Swap out FT5206 for FT6336U

--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -28,7 +28,7 @@ build_flags =
     -D TFT_MOSI=23       ; FCP pin6 SDA
     -D TFT_MISO=25       ; FCP pin7 SDO
     -D TFT_BCKL=5
-    -D TOUCH_DRIVER=5206
+    -D TOUCH_DRIVER=6336 ; FT5206 is too slow, 6336U works 6x faster
     -D TOUCH_SDA=4
     -D TOUCH_SCL=0
     -D TOUCH_IRQ=-1   ; not connected
@@ -46,7 +46,8 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
-    ;git+https://github.com/lvgl/lvgl_esp32_drivers.git
+    ; FT6336U is 6x faster then FocalTech Library
+    ;git+https://github.com/lewisxhe/FocalTech_Library.git
     git+https://github.com/aselectroworks/Arduino-FT6336U.git
 
 lib_ignore =
