--- a/user_setups/esp32/huzzah32-featherwing-24.ini
+++ b/user_setups/esp32/huzzah32-featherwing-24.ini
@@ -23,7 +23,7 @@ build_flags =
     -D TFT_CS=15
     -D TFT_RST=-1  ; RST
     -D TFT_BCKL=-1 ; Solder the LITE pad to a PWM enabled pin of the ESP.
-    -D STMPE_CS=32
+    -D TOUCH_CS=32
 ;endregion
 
 lib_deps =
