--- a/user_setups/esp32/huzzah32-featherwing-35.ini
+++ b/user_setups/esp32/huzzah32-featherwing-35.ini
@@ -12,8 +12,9 @@ board = featheresp32
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
-    -D HASP_MODEL="Adafruit Featherwing 3.2"
+    -D HASP_MODEL="Adafruit Featherwing 3.5"
 
+    -D LV_INDEV_DEF_READ_PERIOD=30
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.featherwing-35}
     -D TFT_MISO=19
@@ -23,7 +24,7 @@ build_flags =
     -D TFT_CS=15
     -D TFT_RST=-1  ; RST
     -D TFT_BCKL=21 ; Solder the LITE pad to a PWM enabled pin of the ESP, like GPIO 21
-    -D STMPE_CS=32
+    -D TOUCH_CS=32
 ;endregion
 
 lib_deps =
