--- a/platformio.ini
+++ b/platformio.ini
@@ -74,8 +74,9 @@ lib_deps =
     git+https://github.com/fvanroie/ConsoleInput.git
     ;git+https://github.com/andrethomas/TasmotaSlave.git
     ;git+https://github.com/lvgl/lvgl.git
-    lvgl/lvgl@^7.11.0                ; from PIO library
-    bodmer/TFT_eSPI@^2.3.69
+    git+https://github.com/lvgl/lvgl.git#b16e7f1076963f123b36dec9ce1dd5950057ca1a
+    ;lvgl/lvgl@^7.11.0                ; from PIO library
+    bodmer/TFT_eSPI@^2.3.70
     ;git+https://github.com/Bodmer/TFT_eSPI.git
     ; ------ Unused / Test libraries
     ;https://github.com/netwizeBE/TFT_eSPI.git
