--- a/platformio.ini
+++ b/platformio.ini
@@ -60,7 +60,7 @@ build_flags =
     ; -- Hasp build options ----------------------------
     -D HASP_VER_MAJ=0
     -D HASP_VER_MIN=6
-    -D HASP_VER_REV=0
+    -D HASP_VER_REV=1
     ${override.build_flags}
 
 ; -- Shared library dependencies in all environments
@@ -74,7 +74,7 @@ lib_deps =
     ;git+https://github.com/andrethomas/TasmotaSlave.git
     ;git+https://github.com/lvgl/lvgl.git
     ;Needed for touch rotation:
-    git+https://github.com/lvgl/lvgl.git#b16e7f1076963f123b36dec9ce1dd5950057ca1a
+    git+https://github.com/lvgl/lvgl.git#release/v7
     ;lvgl/lvgl@^7.11.0                ; from PIO library
     bodmer/TFT_eSPI@^2.3.70
     ;git+https://github.com/Bodmer/TFT_eSPI.git
