Update lv_lib_png repo and gitsubmodules

--- a/user_setups/linux_sdl/linux_sdl_64bits.ini
+++ b/user_setups/linux_sdl/linux_sdl_64bits.ini
@@ -61,7 +61,7 @@ lib_deps =
   https://github.com/eclipse/paho.mqtt.c.git
   bblanchon/ArduinoJson@^6.17.2    ; Json(l) parser
   https://github.com/fvanroie/lv_drivers
-  git+https://github.com/lvgl/lv_lib_png.git#7ff6168764893d658375a9c3173337506ff4eb1b
+  git+https://github.com/lvgl/lv_lib_png.git#release/v7
 
 lib_ignore =
   paho
