--- a/platformio.ini
+++ b/platformio.ini
@@ -150,7 +150,7 @@ lib_ignore =
 
 lib_deps =
     LittleFS_esp32
-    git+https://github.com/lvgl/lv_lib_png.git#7ff6168764893d658375a9c3173337506ff4eb1b
+    git+https://github.com/lvgl/lv_lib_png.git#release/v7
 
 ps_ram =
     -DBOARD_HAS_PSRAM
