--- a/user_setups/esp32/nscreen32.ini
+++ b/user_setups/esp32/nscreen32.ini
@@ -43,7 +43,8 @@ build_flags =
     -D TOUCH_SCL=22
     -D TOUCH_IRQ=5
     -D TOUCH_RST=23
-    -D TOUCH_FREQUENCY=400000
+    ;-D TOUCH_FREQUENCY=400000
+    -D I2C_TOUCH_FREQUENCY=400000
     -D SPI_FREQUENCY=40000000
     -D SPI_READ_FREQUENCY=20000000
 ;endregion
@@ -55,7 +56,7 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
-    git+https://github.com/aselectroworks/Arduino-FT6336U.git
+    git+https://github.com/netwizeBE/arduino-goodix.git
 
 lib_ignore =
     ${env.lib_ignore}
