Update ESP32 platform version

--- a/platformio.ini
+++ b/platformio.ini
@@ -91,7 +91,7 @@ src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/> -<lv_font
 ; -- Platform specific build flags
 [esp32]
 framework = arduino
-platform = espressif32@^3.2.1
+platform = espressif32@^3.3.0
 
 board_upload.flash_size=4MB
 board_upload.maximum_size = 4194304
@@ -115,6 +115,7 @@ build_flags =
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
     -D HASP_CONSOLE_BUFFER=256      ; maximum length of a console/telnet command
     -D NO_GLOBAL_HTTPUPDATE         ; dont instantiate httpUpdate
+    ;-D CONFIG_NEWLIB_NANO_FORMAT
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=49152U           ; 48 kB lvgl memory
     -D LV_ATTRIBUTE_FAST_MEM=IRAM_ATTR
@@ -149,6 +150,7 @@ lib_ignore =
     AXP192
 
 lib_deps =
+    ESP Async WebServer
     LittleFS_esp32
     git+https://github.com/lvgl/lv_lib_png.git#release/v7
 
