--- a/user_setups/esp32/nscreen32.ini
+++ b/user_setups/esp32/nscreen32.ini
@@ -15,7 +15,7 @@ board_build.partitions = user_setups/esp32/partitions_16MB.csv
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
-    ${esp32.hspi}        ; Use VSPI hardware SPI bus
+    ${esp32.hspi}        ; Use HSPI hardware SPI bus
     -D HASP_MODEL="YeaCreate Nscreen32"
 
 ;region -- TFT_eSPI build options ------------------------
