--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -86,12 +86,12 @@ build_flags =
     ${esp32.build_flags}
 ;region -- TFT_eSPI build options -----------------------------------
     ${lcd.lolin24}
-    ${esp32.vspi}
+    ${esp32.vspi}        ; Use VSPI hardware SPI bus
     -D TFT_DC=5
     -D TFT_CS=26 
-    -D TFT_RST=-1  ; RST
-    -D TFT_BCKL=22 ; None, configurable via web UI (e.g. 21)
-    -D TOUCH_CS=17 ; (can also be 22 or 16)
+    -D TFT_RST=-1        ; RST
+    -D TFT_BCKL=22       ; None, configurable via web UI (e.g. 21)
+    -D TOUCH_CS=17       ; (can also be 22 or 16)
 ; -- Options ----------------------------------------
     -D HASP_USE_TELNET=1
 ;endregion
