--- a/user_setups/esp32/makerfabs-tft35-cap.ini
+++ b/user_setups/esp32/makerfabs-tft35-cap.ini
@@ -1,43 +1,42 @@
 ;***************************************************;
-;       ESP32 TFT Touch with camera 3.5" Capacitive ;
+;   Makerfabs TFT Touch with camera 3.5" Capacitive ;
 ;               - 3.5" ili9488 TFT SPI 4-WIRE       ;
 ;               - ft6336 touch controller           ;
 ;***************************************************;
-; untested config
 
-[env:esp32-tft-touch-35]
+[env:makerfabs-tft35-cap]
 extends = esp32
 board = esp32dev
+board_upload.flash_size=16MB
+board_upload.maximum_size = 16777216
+board_build.partitions = user_setups/esp32/partitions_16MB.csv
 
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
-    ${esp32.hspi}        ; Use VSPI hardware SPI bus
-    -D HASP_MODEL="ESP32 TFT Touch 3.5"
+    ${esp32.hspi}        ; Use HSPI hardware SPI bus
+    ${esp32.ps_ram}
+    -D HASP_MODEL="Makerfabs TFT Touch 3.5 Capacitive"
 
 ;region -- TFT_eSPI build options ------------------------
     -D USER_SETUP_LOADED=1
     -D ILI9488_DRIVER=1
+    -D SUPPORT_TRANSACTIONS
     -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
-    -D TFT_CS=15  ;// SS Chip select control pin
-    -D TFT_DC=33  ;// RS Data Command control pin
-    -D TFT_RST=-1 ;// Reset pin (could connect to RST pin)
-    -D TFT_BCKL=32  ;None, configurable via web UI (e.g. 2 for D4)
-    -D SUPPORT_TRANSACTIONS
-    -D TOUCH_DRIVER=6336 ; FT6336 Capacitive touch panel driver 
+    -D TFT_RST=26
+    -D TFT_DC=33
+    -D TFT_CS=15
+    -D TFT_BCKL=-1    ; Needs soldering R31
+    -D SPI_FREQUENCY=60000000
+    -D TOUCH_DRIVER=6336
     -D TOUCH_SDA=26
     -D TOUCH_SCL=27
     -D TOUCH_IRQ=0
-    -D TOUCH_RST=-1   ; not used
+    -D TOUCH_RST=-1
     -D TOUCH_FREQUENCY=400000
-    -D SPI_FREQUENCY=40000000
-    -D SPI_READ_FREQUENCY=20000000
 ;endregion
-
-; -- Debugging options -----------------------------
-;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 
 ;region -- Library options -------------------------------
 lib_deps =
@@ -47,5 +46,12 @@ lib_deps =
 
 lib_ignore =
     ${env.lib_ignore}
-    ${esp32.lib_ignore}
+    GxTFT
+    XPT2046_Touchscreen
+    Adafruit TouchScreen
+    Adafruit BusIO
+    Adafruit GFX Library
+    sstaub/Ticker
+    lv_drv_fsmc_ili9341
+    lv_drivers
 ;endregion
