Correct display model is ST7796S

--- a/user_setups/esp32/wt32-sc01.ini
+++ b/user_setups/esp32/wt32-sc01.ini
@@ -1,7 +1,7 @@
 ;***************************************************;
 ;     Wireless-Tag WT32-SC01 dev board & display    ;
 ;               - Custom ESP32 V3.2 revision board  ;
-;               - ST7789V TFT                       ;
+;               - ST7796S TFT                       ;
 ;               - FT6336U touch controller          ;
 ;***************************************************;
 
