Fixes gauge critical_value scale tick always visible

--- a/platformio.ini
+++ b/platformio.ini
@@ -74,7 +74,9 @@ lib_deps =
     ;git+https://github.com/andrethomas/TasmotaSlave.git
     ;git+https://github.com/lvgl/lvgl.git
     ;Needed for touch rotation:
-    git+https://github.com/lvgl/lvgl.git#release/v7
+    git+https://github.com/fvanroie/lvgl.git#release/v7
+    ;git+https://github.com/lvgl/lvgl.git#797212a3f346e9fdf71aef6f193889357eeae3f0
+    ;git+https://github.com/lvgl/lvgl.git#60ddd13465e4182893d748ae3cc3f69801768e8a
     ;lvgl/lvgl@^7.11.0                ; from PIO library
     bodmer/TFT_eSPI@^2.3.70
     ;git+https://github.com/Bodmer/TFT_eSPI.git
