--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-; MIT License - Copyright (c) 2020 Francis Van Roie
+; MIT License - Copyright (c) 2019-2021 Francis Van Roie
 ; For full license information read the LICENSE file in the project folder
 ;
 ; PlatformIO Project Configuration File
@@ -91,7 +91,7 @@ src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/> -<lv_font
 ; -- Platform specific build flags
 [esp32]
 framework = arduino
-platform = espressif32@^3.3.0
+platform = espressif32@^3.3.1
 
 board_upload.flash_size=4MB
 board_upload.maximum_size = 4194304
