Fix MacOS X compiler issues

--- a/user_setups/darwin_sdl/darwin_sdl_64bits.ini
+++ b/user_setups/darwin_sdl/darwin_sdl_64bits.ini
@@ -29,6 +29,10 @@ build_flags =
   -D HASP_USE_GPIO=1
   -D HASP_USE_CONFIG=0            ; Standalone application, as library
   -D HASP_USE_DEBUG=1
+  -D HASP_USE_PNGDECODE=1
+  -D HASP_USE_BMPDECODE=0
+  -D HASP_USE_GIFDECODE=0
+  -D HASP_USE_JPGDECODE=0
   -D HASP_USE_MQTT=1
   -D MQTT_MAX_PACKET_SIZE=2048
   -D HASP_ATTRIBUTE_FAST_MEM=
@@ -66,6 +70,7 @@ lib_deps =
   https://github.com/eclipse/paho.mqtt.c.git
   bblanchon/ArduinoJson@^6.17.2    ; Json(l) parser
   https://github.com/fvanroie/lv_drivers
+  git+https://github.com/lvgl/lv_lib_png.git#release/v7
 
 lib_ignore =
   paho
@@ -78,6 +83,7 @@ src_filter =
   +<../hal/sdl2>
   +<../.pio/libdeps/darwin_sdl_64bits/paho/src/*.c>
   +<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTClient.c>
+  +<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTClient.h>
   -<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTAsync.c>
   -<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTAsyncUtils.c>
   -<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTVersion.c>
