Comment unused linux image libraries

--- a/user_setups/linux_sdl/linux_sdl_64bits.ini
+++ b/user_setups/linux_sdl/linux_sdl_64bits.ini
@@ -29,9 +29,9 @@ build_flags =
   -D HASP_USE_CONFIG=0            ; Standalone application, as library
   -D HASP_USE_DEBUG=1
   -D HASP_USE_PNGDECODE=1
-  -D HASP_USE_BMPDECODE=1
-  -D HASP_USE_GIFDECODE=1
-  -D HASP_USE_JPGDECODE=1
+  -D HASP_USE_BMPDECODE=0
+  -D HASP_USE_GIFDECODE=0
+  -D HASP_USE_JPGDECODE=0
   -D HASP_USE_MQTT=1
   -D MQTT_MAX_PACKET_SIZE=2048
   -D HASP_ATTRIBUTE_FAST_MEM=
@@ -65,9 +65,9 @@ lib_deps =
   bblanchon/ArduinoJson@^6.17.2    ; Json(l) parser
   https://github.com/fvanroie/lv_drivers
   git+https://github.com/lvgl/lv_lib_png.git#release/v7
-  git+https://github.com/lvgl/lv_lib_bmp.git#release/v7
-  git+https://github.com/lvgl/gif.git#release/v7
-  git+https://github.com/fvanroie/lv_lib_split_jpg.git
+  ; git+https://github.com/lvgl/lv_lib_bmp.git#release/v7
+  ; git+https://github.com/lvgl/gif.git#release/v7
+  ; git+https://github.com/fvanroie/lv_lib_split_jpg.git
 
 lib_ignore =
   paho
