--- a/platformio.ini
+++ b/platformio.ini
@@ -156,9 +156,9 @@ lib_deps =
     ESP Async WebServer
     LittleFS_esp32
     git+https://github.com/lvgl/lv_lib_png.git#release/v7
-    #git+https://github.com/lvgl/lv_lib_bmp.git#release/v7
-    #git+https://github.com/lvgl/lv_lib_gif.git#release/v7
-    git+https://github.com/fvanroie/lv_lib_split_jpg.git
+    ;git+https://github.com/lvgl/lv_lib_bmp.git#release/v7
+    ;git+https://github.com/lvgl/lv_lib_gif.git#release/v7
+    git+https://github.com/lvgl/lv_lib_split_jpg.git
 
 ps_ram =
     -DBOARD_HAS_PSRAM
