--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -25,7 +25,7 @@ extra_default_envs =
     ; arduitouch-esp32_ili9341
     ; d1-mini-esp32_ili9341
     ; d1-mini-esp8266_ili9341
-    ; d132-unoshield
+    ; d1-r32-unoshield
     ; esp12e-st7735
     ; esp32dev-mrb3511
     ; esp32dev-ili9488
@@ -35,6 +35,7 @@ extra_default_envs =
     ; nodemcu32s-raspi
     ; wt32-sc01
     ; ttgo_esp32_poe-ili9341
+    ; ttgo-lilygo-pi_ili9481
 ;endregion
 
 ;region -- Define your local COM ports for each environment ---
@@ -50,7 +51,7 @@ upload_port = ${env:d1-mini-esp8266_ili9341.monitor_port}
 monitor_port = COM3       ; Change to the correct port
 upload_port = ${env:esp32dev-mrb3511.monitor_port}
 
-[env:d132-unoshield]
+[env:d1-r32-unoshield]
 monitor_port = COM9       ; Change to the correct port
 ;upload_port = ${$env:d132-unoshield.monitor_port}
 upload_port = 192.168.4.4 ; IP of the ESP
@@ -58,6 +59,13 @@ upload_protocol = espota  ; Use ArduinoOTA after flashing over serial
 upload_flags = --port=3232 ; --auth=haspadmin   ; OTA password
 
 [env:ttgo_esp32_poe-ili9341]
+monitor_port = COM9       ; Change to the correct port
+;upload_port = ${env:ttgo_esp32_poe-ili9341.monitor_port}
+upload_port = 192.168.4.5 ; IP of the ESP
+upload_protocol = espota  ; Use ArduinoOTA after flashing over serial
+upload_flags = --port=3232 ; --auth=haspadmin   ; OTA password
+
+[env:ttgo-lilygo-pi_ili9481]
 monitor_port = COM9       ; Change to the correct port
 ;upload_port = ${env:ttgo_esp32_poe-ili9341.monitor_port}
 upload_port = 192.168.4.5 ; IP of the ESP
