--- a/user_setups/esp32/d1-r32-unoshield_ili9486_parallel.ini
+++ b/user_setups/esp32/d1-r32-unoshield_ili9486_parallel.ini
@@ -4,7 +4,7 @@
 ;               - ili9486 TFT                       ;
 ;***************************************************;
 
-[env:d132-unoshield]
+[env:d1-r32-unoshield]
 extends = esp32
 board = esp32dev
 
@@ -15,7 +15,7 @@ build_flags =
 ;region -- TFT_eSPI build options ------------------------
     -D USER_SETUP_LOADED=1
     ;-D ST7796_DRIVER=1 ;3.95inch Arduino Display-UNO
-     -D ILI9486_DRIVER=1 ;3.5inch Arduino Display-UNO
+    -D ILI9486_DRIVER=1 ;3.5inch Arduino Display-UNO
     -D ESP32_PARALLEL=1
     -D TFT_ROTATION=${lcd.TFT_ROTATION}
     -D TFT_WIDTH=320
