--- a/user_setups/esp32/ttgo-lilygo-pi_ili9481.ini
+++ b/user_setups/esp32/ttgo-lilygo-pi_ili9481.ini
@@ -1,11 +1,11 @@
 ;***************************************************;
 ;          Lilygo®Ttgo Pi ESP32 with TFT 3.5"       ;
 ;               - Custom PCB with ESP32-WROVER      ;
-;               - IPS ili9488 LCD                   ;
+;               - IPS ili9481 LCD                   ;
 ;               - GT911 touch controller            ;
 ;***************************************************;
 
-[env:ttgo-esp32-lilygo-pi]
+[env:ttgo-lilygo-pi_ili9481]
 extends = esp32
 board = esp32dev
 board_upload.flash_size=16MB
@@ -19,6 +19,7 @@ build_flags =
     
 ;region -- TFT_eSPI build options ------------------------
     -D ILI9481_DRIVER=1
+    -D INVERT_COLORS=1 ;-D TFT_INVERSION_ON   ; for inverted colors
     -D SPI_FREQUENCY=27000000
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
