Use L:/file.png instead of /littlefs/file.png

--- a/platformio.ini
+++ b/platformio.ini
@@ -50,6 +50,7 @@ build_flags =
     -D LV_COMP_CONF_INCLUDE_SIMPLE  ; for components
     -D LV_SYMBOL_DEF_H              ; don't load default symbol defines
     -D LODEPNG_NO_COMPILE_ALLOCATORS ; use PSram functions
+    -D LV_PNG_USE_LV_FILESYSTEM=1   ; use lvgl filesystem api, drive L:\
     ; -- ESP build options ------------------------------------
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     ; -- ArduinoJson build options ----------------------------
