Remove unused image libraries from Windows config

--- a/platformio.ini
+++ b/platformio.ini
@@ -163,7 +163,7 @@ lib_deps =
 
 ps_ram =
     -DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue
+    -mfix-esp32-psram-cache-issue  ; uses 24kB
 
 extra_scripts =
     tools/littlefsbuilder.py
