--- a/user_setups/win32/windows_sdl_64bits.ini
+++ b/user_setups/win32/windows_sdl_64bits.ini
@@ -31,7 +31,7 @@ build_flags =
   -D HASP_USE_PNGDECODE=1
   -D HASP_USE_BMPDECODE=0
   -D HASP_USE_GIFDECODE=0
-  -D HASP_USE_JPGDECODE=1
+  -D HASP_USE_JPGDECODE=0
   -D HASP_USE_MQTT=1
   -D MQTT_MAX_PACKET_SIZE=2048
   -D HASP_ATTRIBUTE_FAST_MEM=
@@ -53,6 +53,7 @@ build_flags =
   -I.pio/libdeps/windows_sdl_64bits/paho/src
   -I.pio/libdeps/windows_sdl_64bits/ArduinoJson/src
   -I lib/lv_fs_if
+  -I lib/lv_datetime
   !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/sdl2')]))"
   -mconsole
   ; ----- Statically linked libraries --------------------
@@ -87,9 +88,9 @@ lib_deps =
   bblanchon/ArduinoJson@^6.17.2    ; Json(l) parser
   https://github.com/fvanroie/lv_drivers
   git+https://github.com/lvgl/lv_lib_png.git#release/v7
-  #git+https://github.com/lvgl/lv_lib_bmp.git#release/v7
-  #git+https://github.com/lvgl/gif.git#release/v7
-  git+https://github.com/fvanroie/lv_lib_split_jpg.git
+  ;git+https://github.com/lvgl/lv_lib_bmp.git#release/v7
+  ;git+https://github.com/lvgl/gif.git#release/v7
+  ;git+https://github.com/fvanroie/lv_lib_split_jpg.git
 
 lib_ignore =
   paho
@@ -127,3 +128,4 @@ src_filter =
   -<log/>
   +<mqtt/>
   +<../.pio/libdeps/windows_sdl_64bits/ArduinoJson/src/ArduinoJson.h>
+  +<lib/lv_datetime>
