Re-organize lcd_config

--- a/user_setups/esp32/arduitouch-esp32_ili9341.ini
+++ b/user_setups/esp32/arduitouch-esp32_ili9341.ini
@@ -15,7 +15,8 @@ build_flags =
     -D HASP_MODEL="Arduitouch ESP32"
 
 ;region -- TFT_eSPI build options ------------------------
-    ${lcd.lolin24}
+    ${lcd.ili9341}
+    ${touch.xpt2046}
     ${esp32.vspi}        ; Use VSPI hardware SPI bus
     -D TFT_DC=4
     -D TFT_CS=5 
