--- a/user_setups/esp8266/d1-mini-esp8266_ili9341.ini
+++ b/user_setups/esp8266/d1-mini-esp8266_ili9341.ini
@@ -14,7 +14,8 @@ build_flags =
     ${esp8266.build_flags}
 
 ;region -- TFT_eSPI build options ------------------------
-    ${lcd.lolin24}
+    ${lcd.ili9341}
+    ${touch.xpt2046}
     ;-D TFT_MISO=12 ;D6  Use default HSPI
     ;-D TFT_MOSI=13 ;D7  Use default HSPI
     ;-D TFT_SCLK=14 ;D5  Use default HSPI
