--- a/user_setups/lcd_config.ini
+++ b/user_setups/lcd_config.ini
@@ -1,3 +1,17 @@
+; -- Standard configuration parameters for supported touch panels
+[touch]
+xpt2046 =
+    -D SPI_TOUCH_FREQUENCY=2500000
+    -D TOUCH_DRIVER=2046     ; XPT2046 Resistive SPI touch panel driver
+
+gt911 =
+    -D TOUCH_DRIVER=911      ; GT911 Capacitive I2C touch panel driver
+    -D I2C_TOUCH_FREQUENCY=400000
+
+stmpe610 =
+    -D TOUCH_DRIVER=610      ;STMPE610 Capacitive SPI touch panel driver
+    -D SPI_TOUCH_FREQUENCY=2500000
+
 ; -- Standard configuration parameters for supported displays
 [lcd]
 tft_rotation = 0      ; default rotation
@@ -13,6 +27,16 @@ tft_height = 320      ; default height
 ; 5 - mirror content, and rotate 270 deg anti-clockwise
 ; 6 - mirror content, and rotate 0 deg anti-clockwise
 ; 7 - mirror content, and rotate 90 deg anti-clockwise
+
+ili9341 =
+    -D ILI9341_DRIVER=1
+    -D TFT_WIDTH=240
+    -D TFT_HEIGHT=320
+    -D TFT_ROTATION=0 ; Use default, see TFT_ROTATION values
+    -D SPI_FREQUENCY=40000000
+    -D SPI_READ_FREQUENCY=20000000
+    -D USER_SETUP_LOADED=1
+    -D SUPPORT_TRANSACTIONS
 
 lolin24 =
     -D ILI9341_DRIVER=1
