--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -21,7 +21,8 @@ build_flags =
     -D HASP_MODEL="Lolin D32 Pro"
 
 ;region -- TFT_eSPI build options ------------------------
-    ${lcd.lolin24}
+    ${lcd.ili9341}
+    ${touch.xpt2046}
     ${esp32.vspi}        ; Use VSPI hardware SPI bus
     -D USE_TFT_ESPI
     ; The board already defines the macros for the TFT connector:
