--- a/user_setups/esp32/esp32-ili9341-unoshield-analog.ini
+++ b/user_setups/esp32/esp32-ili9341-unoshield-analog.ini
@@ -36,7 +36,7 @@ build_flags =
     -D TFT_D7=14
     -D SD_CS=5
     -D SPI_FREQUENCY=40000000
-    -D TOUCH_DRIVER=404 ; No touch driver found? No problem
+    -D TOUCH_DRIVER=0xADC ; No touch driver found? No problem
     -D TOUCH_anDC=35 ; Analog pin to be connected to TFT_DC
     -D TOUCH_anWR=34 ; Analog pin to be connected to TFT_WR
 ;endregion
