--- a/user_setups/esp32/d1-r32-unoshield_ili9341-adc.ini
+++ b/user_setups/esp32/d1-r32-unoshield_ili9341-adc.ini
@@ -1,6 +1,7 @@
 ;***************************************************;
-;     GenericESP32 build with                       ;
-;          - Arduino UNO ILI9341 2.4" TFT shield    ;
+;     Generic ESP32 build with                      ;
+;      - Wemos "TTGo" D1-R32 board aka ESPDUINO-32  ;
+;      - Arduino UNO ILI9341 2.4" TFT shield        ;
 ;***************************************************;
 
 [env:esp32-9341-unoshield-analog]
@@ -12,6 +13,7 @@ build_flags =
     ${esp32.build_flags}
 
 ;region -- TFT_eSPI build options ------------------------
+    ${esp32.vspi}        ; Use VSPI hardware SPI bus
     -D USER_SETUP_LOADED=1
     -D ILI9341_DRIVER=1
     -D TFT_WIDTH=240
@@ -19,7 +21,6 @@ build_flags =
     -D ESP32_PARALLEL=1
     -D TFT_BACKLIGHT_ON=0 ; At what level is the backlight on
     -D TFT_ROTATION=0 ; Use default, see TFT_ROTATION values
-    ${esp32.vspi}        ; Use VSPI hardware SPI bus
     -D TFT_BCKL=-1  ;None, configurable via web UI (e.g. 2 for D4)
     -D TFT_CS=33  ; Chip select control pin
     -D TFT_DC=15  ; Data Command control pin - must use a pin in the range 0-31
@@ -36,6 +37,7 @@ build_flags =
     -D TFT_D7=14
     -D SD_CS=5
     -D SPI_FREQUENCY=40000000
+    -D SPI_READ_FREQUENCY=20000000
     -D TOUCH_DRIVER=0xADC ; No touch driver found? No problem
     -D TOUCH_anDC=35 ; Analog pin to be connected to TFT_DC
     -D TOUCH_anWR=34 ; Analog pin to be connected to TFT_WR
