--- a/user_setups/esp32/d1-r32-unoshield_ili9486_adc.ini
+++ b/user_setups/esp32/d1-r32-unoshield_ili9486_adc.ini
@@ -1,7 +1,7 @@
 ;***************************************************;
-;          ESP32 build with                         ;
-;               - Wemos "TTGo" D1 R32 board         ;
-;               - ili9486 TFT                       ;
+;     Generic ESP32 build with                      ;
+;      - Wemos "TTGo" D1-R32 board aka ESPDUINO-32  ;
+;      - Arduino UNO ILI9486 3.5" TFT shield    ;
 ;***************************************************;
 
 [env:d1-r32-unoshield]
@@ -13,14 +13,13 @@ build_flags =
     ${esp32.build_flags}
 
 ;region -- TFT_eSPI build options ------------------------
+    ${esp32.vspi}        ; Use VSPI hardware SPI bus
     -D USER_SETUP_LOADED=1
-    ;-D ST7796_DRIVER=1 ;3.95inch Arduino Display-UNO
     -D ILI9486_DRIVER=1 ;3.5inch Arduino Display-UNO
-    -D ESP32_PARALLEL=1
-    -D TFT_ROTATION=${lcd.TFT_ROTATION}
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
-    ${esp32.vspi}        ; Use VSPI hardware SPI bus
+    -D ESP32_PARALLEL=1
+    -D TFT_ROTATION=${lcd.TFT_ROTATION}
     -D TFT_BCKL=-1  ;None, configurable via web UI (e.g. 2 for D4)
     -D TFT_CS=33  ; Chip select control pin
     -D TFT_DC=15  ; Data Command control pin - must use a pin in the range 0-31
@@ -37,8 +36,10 @@ build_flags =
     -D TFT_D7=14
     -D SD_CS=5
     -D SPI_FREQUENCY=40000000
-    ;-D SPI_TOUCH_FREQUENCY=2500000 ; Uses ADC instead
     -D SPI_READ_FREQUENCY=20000000
+    -D TOUCH_DRIVER=0xADC ; No touch driver found? No problem
+    -D TOUCH_anDC=35 ; Analog pin to be connected to TFT_DC
+    -D TOUCH_anWR=34 ; Analog pin to be connected to TFT_WR
 ;endregion
 
 ; -- Debugging options -----------------------------
