--- a/user_setups/esp32/arduitouch-esp32_ili9341.ini
+++ b/user_setups/esp32/arduitouch-esp32_ili9341.ini
@@ -1,6 +1,6 @@
 ;***************************************************;
 ;   AZ ArduiTouch PCB with ESP32 with 2.4" or 2.8"  ;
-;               - ESP32-WROOM-32 board              ;
+;               - ESP32-WROOM or WROVER board       ;
 ;               - ili9341 TFT                       ;
 ;               - xpt2046 touch controller          ;
 ;***************************************************;
@@ -12,6 +12,7 @@ board = esp32dev
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
+    ${esp32.ps_ram}
     -D HASP_MODEL="Arduitouch ESP32"
 
 ;region -- TFT_eSPI build options ------------------------
