--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -28,15 +28,16 @@ extra_default_envs =
     ; d1-r32-unoshield
     ; esp32-9341-unoshield-analog
     ; esp12e-st7735
+    ; esp32-one_st7796
     ; esp32dev-mrb3511
     ; esp32dev-ili9488
     ; lanbon_l8
     ; lolin-d32-pro_ili9341
     ; my_custom_build
     ; nodemcu32s-raspi
-    ; wt32-sc01
     ; ttgo_esp32_poe-ili9341
     ; ttgo-lilygo-pi_ili9481
+    ; wt32-sc01
 ;endregion
 
 ;region -- Define your local COM ports for each environment ---
@@ -63,6 +64,15 @@ upload_flags = --port=3232 ; --auth=haspadmin   ; OTA password
 monitor_port = COM7       ; Leave commented to autodescover
 ; upload_port = ${$env:esp32-9341-unoshield-analog.monitor_port}
 
+[env:esp32-one_st7796]
+upload_port = COM6      ; Change to the correct port
+monitor_port = COM6     ; Change to the correct port
+
+[env:lolin-d32-pro_ili9341]
+monitor_port = COM5       ; Change to the correct port
+upload_port = ${env:lolin-d32-pro_ili9341.monitor_port}
+;endregion
+
 [env:ttgo_esp32_poe-ili9341]
 monitor_port = COM9       ; Change to the correct port
 ;upload_port = ${env:ttgo_esp32_poe-ili9341.monitor_port}
@@ -76,11 +86,6 @@ monitor_port = COM9       ; Change to the correct port
 upload_port = 192.168.4.5 ; IP of the ESP
 upload_protocol = espota  ; Use ArduinoOTA after flashing over serial
 upload_flags = --port=3232 ; --auth=haspadmin   ; OTA password
-
-[env:lolin-d32-pro_ili9341]
-monitor_port = COM5       ; Change to the correct port
-upload_port = ${env:lolin-d32-pro_ili9341.monitor_port}
-;endregion
 
 ;region -- Custom Environment configuration example -----------------
 [env:my_custom_build]
