--- a/user_setups/esp32/esp32-one_st7796.ini
+++ b/user_setups/esp32/esp32-one_st7796.ini
@@ -5,7 +5,7 @@
 ;               - XPT2046 touch controller          ;
 ;***************************************************;
 
-[env:esp32-one_ili9486]
+[env:esp32-one_st7796]
 extends = esp32
 board = esp32dev
 
