--- a/platformio.ini
+++ b/platformio.ini
@@ -154,7 +154,7 @@ lib_ignore =
     AXP192
 
 lib_deps =
-    ESP Async WebServer
+    ;ESP Async WebServer
     LittleFS_esp32
     git+https://github.com/lvgl/lv_lib_png.git#release/v7
     ;git+https://github.com/lvgl/lv_lib_bmp.git#release/v7
