--- a/user_setups/esp32/ttgo-lilygo-pi_st7796.ini
+++ b/user_setups/esp32/ttgo-lilygo-pi_st7796.ini
@@ -2,7 +2,7 @@
 ;          Lilygo®Ttgo Pi ESP32 with TFT 3.5"       ;
 ;               - Custom PCB with ESP32-WROVER      ;
 ;               - IPS st7796 LCD                    ;
-;               - GT911 touch controller            ;
+;               - FT6236 touch controller           ;
 ;***************************************************;
 
 [env:ttgo-lilygo-pi_st7796]
@@ -33,12 +33,13 @@ build_flags =
     -D TFT_CS=5 
     -D TFT_RST=-1  ; RST
     -D TFT_BCKL=12 ; None, configurable via web UI (e.g. 21)
-    -D TOUCH_DRIVER=911 ; GT911 Capacitive I2C touch panel driver
+    -D TOUCH_DRIVER=6336
     -D TOUCH_IRQ=34
     -D TOUCH_RST=-1
     -D TOUCH_SDA=21
     -D TOUCH_SCL=22
     -D I2C_TOUCH_FREQUENCY=400000
+    -D TOUCH_FREQUENCY=400000
 ;endregion
 
 ;region -- Hasp build options ----------------------------
@@ -54,6 +55,7 @@ lib_deps =
     ; GT911 touch screen driver
     git+https://github.com/netwizeBE/arduino-goodix.git
     lovyan03/LovyanGFX @ ^0.4.4
+    git+https://github.com/aselectroworks/Arduino-FT6336U.git
 
 lib_ignore =
     ${env.lib_ignore}
