Restructure touch driver read_touch

--- a/user_setups/esp32/m5stack_core2.ini
+++ b/user_setups/esp32/m5stack_core2.ini
@@ -31,7 +31,7 @@ build_flags =
     -D TOUCH_SCL=22
     -D TOUCH_IRQ=39
     -D TOUCH_RST=-1   ; Managed by AXP_IO4
-    -D TOUCH_FREQUENCY=400000
+    -D I2C_TOUCH_FREQUENCY=400000
 ;endregion
 
 ;region -- Library options -------------------------------
