--- a/user_setups/esp32/esp32-touchdown.ini
+++ b/user_setups/esp32/esp32-touchdown.ini
@@ -30,7 +30,7 @@ build_flags =
     -D TOUCH_SCL=22
     -D TOUCH_IRQ=27
     -D TOUCH_RST=-1   ; not used
-    -D TOUCH_FREQUENCY=400000
+    -D I2C_TOUCH_FREQUENCY=400000
     -D SPI_FREQUENCY=40000000
     -D SPI_READ_FREQUENCY=20000000
 ;endregion
