--- a/user_setups/esp32/makerfabs-tft35-cap.ini
+++ b/user_setups/esp32/makerfabs-tft35-cap.ini
@@ -35,7 +35,7 @@ build_flags =
     -D TOUCH_SCL=27
     -D TOUCH_IRQ=0
     -D TOUCH_RST=-1
-    -D TOUCH_FREQUENCY=400000
+    -D I2C_TOUCH_FREQUENCY=400000
 ;endregion
 
 ;region -- Library options -------------------------------
