Update forms to use CSS  #246

--- a/platformio.ini
+++ b/platformio.ini
@@ -101,6 +101,7 @@ board_build.partitions = user_setups/esp32/partitions_4MB.csv
 board_build.filesystem = littlefs
 board_build.embed_files =
     data/edit.htm.gz
+    data/style.css.gz
 
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
