Add LovyanGfx Touch driver

--- a/user_setups/esp32/esp32-touchdown.ini
+++ b/user_setups/esp32/esp32-touchdown.ini
@@ -31,6 +31,7 @@ build_flags =
     -D TOUCH_IRQ=27
     -D TOUCH_RST=-1   ; not used
     -D I2C_TOUCH_FREQUENCY=400000
+    -D I2C_TOUCH_ADDRESS=0x38
     -D SPI_FREQUENCY=40000000
     -D SPI_READ_FREQUENCY=20000000
 ;endregion
