--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -34,6 +34,7 @@ build_flags =
     -D TOUCH_IRQ=-1   ; not connected
     -D TOUCH_RST=-1   ; not used, connected to 3.3V on FCP pin10
     -D I2C_TOUCH_FREQUENCY=400000
+    -D I2C_TOUCH_ADDRESS=0x38
     -D LED_RED=26
     -D LED_GREEN=32
     -D LED_BLUE=33
