--- a/user_setups/esp32/m5stack_core2.ini
+++ b/user_setups/esp32/m5stack_core2.ini
@@ -32,6 +32,7 @@ build_flags =
     -D TOUCH_IRQ=39
     -D TOUCH_RST=-1   ; Managed by AXP_IO4
     -D I2C_TOUCH_FREQUENCY=400000
+    -D I2C_TOUCH_ADDRESS=0x38
 ;endregion
 
 ;region -- Library options -------------------------------
