--- a/user_setups/esp32/ttgo-lilygo-pi_st7796.ini
+++ b/user_setups/esp32/ttgo-lilygo-pi_st7796.ini
@@ -33,12 +33,14 @@ build_flags =
     -D TFT_CS=5 
     -D TFT_RST=-1  ; RST
     -D TFT_BCKL=12 ; None, configurable via web UI (e.g. 21)
+    -D I2C_TOUCH_FREQUENCY=400000
+    -D I2C_TOUCH_PORT=1
+    -D I2C_TOUCH_ADDRESS=0x38
     -D TOUCH_DRIVER=6336
     -D TOUCH_IRQ=34
     -D TOUCH_RST=-1
     -D TOUCH_SDA=21
     -D TOUCH_SCL=22
-    -D I2C_TOUCH_FREQUENCY=400000
 ;endregion
 
 ;region -- Hasp build options ----------------------------
