--- a/user_setups/esp32/makerfabs-tft35-cap.ini
+++ b/user_setups/esp32/makerfabs-tft35-cap.ini
@@ -36,6 +36,7 @@ build_flags =
     -D TOUCH_IRQ=0
     -D TOUCH_RST=-1
     -D I2C_TOUCH_FREQUENCY=400000
+    -D I2C_TOUCH_ADDRESS=0x38
 ;endregion
 
 ;region -- Library options -------------------------------
