Update PSram, Touch driver and Flash size configs

--- a/platformio.ini
+++ b/platformio.ini
@@ -95,9 +95,6 @@ src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/> -<lv_font
 framework = arduino
 platform = espressif32@^3.3.2
 
-board_upload.flash_size=4MB
-board_upload.maximum_size = 4194304
-board_build.partitions = user_setups/esp32/partitions_4MB.csv
 board_build.filesystem = littlefs
 board_build.embed_files =
     data/edit.htm.gz
@@ -162,16 +159,17 @@ lib_deps =
     ;git+https://github.com/lvgl/lv_lib_gif.git#release/v7
     ;git+https://github.com/lvgl/lv_lib_split_jpg.git
 
-ps_ram =
-    -DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue  ; uses 24kB
-
 extra_scripts =
     tools/littlefsbuilder.py
     tools/esp_merge_bin.py
     tools/analyze_elf.py
 ;    ${env.extra_scripts}
 ;    tools/copy_partitions.py
+
+ps_ram =
+    -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue  ; uses 24kB
+no_ps_ram =
 
 ; -- The ESP32 has 2 SPI Hardware Busses available to use:
 vspi =
@@ -182,6 +180,26 @@ hspi =
     -D TFT_MISO=12
     -D TFT_MOSI=13
     -D TFT_SCLK=14
+
+; -- The ESP32 has 3 available flash sizes:
+[esp32_4mb]
+extends = esp32
+board_upload.flash_size=4MB
+board_upload.maximum_size = 4194304
+board_build.partitions = user_setups/esp32/partitions_4MB.csv
+
+[esp32_8mb]
+extends = esp32
+board_upload.flash_size=8MB
+board_upload.maximum_size = 8388608
+board_build.partitions = user_setups/esp32/partitions_8MB.csv
+
+[esp32_16mb]
+extends = esp32
+board_upload.flash_size = 16MB
+board_upload.maximum_size = 16777216
+board_build.partitions = user_setups/esp32/partitions_16MB.csv
+
 
 ; -- Platform specific build flags
 [esp32s2]
