--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -1,16 +1,5 @@
 ; -- Platform specific build flags
 [esp32]
-framework = arduino
-platform = espressif32@^3.3.2
-
-board_build.filesystem = littlefs
-board_build.embed_files =
-    data/edit.htm.gz
-    data/style.css.gz
-
-; ----- crash reporter
-monitor_filters = esp32_exception_decoder
-
 ; ----- debugger
 check_tool = cppcheck
 check_flags = --enable=all
@@ -90,23 +79,62 @@ hspi =
     -D TFT_SCLK=14
 
 
-; -- The ESP32 has 3 available flash sizes:
+; -- The Arduino ESP32 v1.0.6 with 3 available flash sizes:
+[arduino_esp32_v1]
+framework = arduino
+platform = espressif32@^3.3.2
+board_build.embed_files =
+    data/edit.htm.gz
+    data/style.css.gz
+board_build.filesystem = littlefs
+; ----- crash reporter
+monitor_filters = esp32_exception_decoder
+
 [esp32_4mb]
-extends = esp32
+extends = exp32, arduino_esp32_v1
 board_upload.flash_size=4MB
 board_upload.maximum_size = 4194304
 board_build.partitions = user_setups/esp32/partitions_4MB.csv
 
-
 [esp32_8mb]
-extends = esp32
+extends = exp32, arduino_esp32_v1
 board_upload.flash_size=8MB
 board_upload.maximum_size = 8388608
 board_build.partitions = user_setups/esp32/partitions_8MB.csv
 
-
 [esp32_16mb]
-extends = esp32
+extends = exp32, arduino_esp32_v1
+board_upload.flash_size = 16MB
+board_upload.maximum_size = 16777216
+board_build.partitions = user_setups/esp32/partitions_16MB.csv
+
+
+; -- The Arduino ESP32 v2.0.1 with 3 available flash sizes:
+[arduino_esp32_v2]
+platform  = https://github.com/platformio/platform-espressif32.git#feature/arduino-upstream
+platform_packages =
+   framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.0
+board_build.embed_files =
+    data/edit.htm.gz
+    data/style.css.gz
+board_build.filesystem = littlefs
+; ----- crash reporter
+monitor_filters = esp32_exception_decoder
+
+[esp32_4mb_v2]
+extends = exp32, arduino_esp32_v2
+board_upload.flash_size=4MB
+board_upload.maximum_size = 4194304
+board_build.partitions = user_setups/esp32/partitions_4MB.csv
+
+[esp32_8mb_v2]
+extends = exp32, arduino_esp32_v2
+board_upload.flash_size=8MB
+board_upload.maximum_size = 8388608
+board_build.partitions = user_setups/esp32/partitions_8MB.csv
+
+[esp32_16mb_v2]
+extends = exp32, arduino_esp32_v2
 board_upload.flash_size = 16MB
 board_upload.maximum_size = 16777216
 board_build.partitions = user_setups/esp32/partitions_16MB.csv
