--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -36,6 +36,12 @@ build_flags =
     -D HASP_USE_GIFDECODE=0
 ; -- LittleFS build options ------------------------
 	;-D CONFIG_LITTLEFS_FOR_IDF_3_2  ; obsolete in IDF 3.3
+; -- FreeType build options ------------------------
+    -D LV_USE_FT_CACHE_MANAGER=1                ; crashes without cache
+    -D USE_LVGL_FREETYPE_MAX_FACES=64           ; max number of FreeType faces in cache
+    -D USE_LVGL_FREETYPE_MAX_SIZES=4            ; max number of sizes in cache
+    -D USE_LVGL_FREETYPE_MAX_BYTES=16384        ; max bytes in cache
+    -D USE_LVGL_FREETYPE_MAX_BYTES_PSRAM=65536  ; max bytes in cache when using PSRAM
 
 lib_ignore =
     GxTFT
