--- a/user_setups/esp32/arduitouch-esp32_ili9341.ini
+++ b/user_setups/esp32/arduitouch-esp32_ili9341.ini
@@ -15,6 +15,8 @@ build_flags =
     ${esp32.ps_ram}
     -D HASP_MODEL="Arduitouch ESP32"
 
+    -D HASP_USE_OTA=0   ; No ArduinoOTA on port 3232
+
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.ili9341}
     ${touch.xpt2046}
