--- a/user_setups/esp32/wt32-sc01.ini
+++ b/user_setups/esp32/wt32-sc01.ini
@@ -5,8 +5,7 @@
 ;               - FT6336U touch controller          ;
 ;***************************************************;
 
-[env:wt32-sc01]
-extends = esp32_4mb
+[wt32-sc01]
 board = esp32dev
 
 build_flags =
@@ -46,3 +45,9 @@ lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
 ;endregion
+
+[env:wt32-sc01]
+extends = wt32-sc01, esp32_4mb
+
+[env:wt32-sc01_16MB]
+extends = wt32-sc01, esp32_16mb
