--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -92,6 +92,7 @@ platform = espressif32@^3.3.2
 board_build.embed_files =
     data/edit.htm.gz
     data/style.css.gz
+    data/script.js.gz
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
