--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -53,10 +53,11 @@ lib_ignore =
     lv_drv_fsmc_ili9341
     lv_drivers
     AXP192
+    LittleFS_esp32    ; for v2
 
 lib_deps =
     ;ESP Async WebServer
-    LittleFS_esp32
+    ;LittleFS_esp32   ; for v1
     git+https://github.com/lvgl/lv_lib_png.git#release/v7
     ;git+https://github.com/lvgl/lv_lib_bmp.git#release/v7
     ;git+https://github.com/lvgl/lv_lib_gif.git#release/v7
@@ -98,19 +99,19 @@ board_build.filesystem = littlefs
 monitor_filters = esp32_exception_decoder
 
 [esp32_4mb]
-extends = exp32, arduino_esp32_v1
+extends = exp32, arduino_esp32_v2
 board_upload.flash_size=4MB
 board_upload.maximum_size = 4194304
 board_build.partitions = user_setups/esp32/partitions_4MB.csv
 
 [esp32_8mb]
-extends = exp32, arduino_esp32_v1
+extends = exp32, arduino_esp32_v2
 board_upload.flash_size=8MB
 board_upload.maximum_size = 8388608
 board_build.partitions = user_setups/esp32/partitions_8MB.csv
 
 [esp32_16mb]
-extends = exp32, arduino_esp32_v1
+extends = exp32, arduino_esp32_v2
 board_upload.flash_size = 16MB
 board_upload.maximum_size = 16777216
 board_build.partitions = user_setups/esp32/partitions_16MB.csv
@@ -118,12 +119,17 @@ board_build.partitions = user_setups/esp32/partitions_16MB.csv
 
 ; -- The Arduino ESP32 v2.0.1 with 3 available flash sizes:
 [arduino_esp32_v2]
-platform  = https://github.com/platformio/platform-espressif32.git#feature/arduino-upstream
+framework = arduino
+platform = https://github.com/platformio/platform-espressif32.git#feature/arduino-upstream
 platform_packages =
-   framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.0
+    ;framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#mem-optimized
+    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.1
+    ;framework-arduinoespressif32 @ https://github.com/marcovannoord/arduino-esp32.git#idf-release/v4.0
+    ;toolchain-xtensa32 @ 3.80200.200512
 board_build.embed_files =
     data/edit.htm.gz
     data/style.css.gz
+    data/script.js.gz
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
