--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -97,6 +97,8 @@ board_build.embed_files =
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
+extra_scripts =
+    ${esp32.extra_scripts}
 
 [esp32_4mb]
 extends = exp32, arduino_esp32_v2
@@ -133,6 +135,8 @@ board_build.embed_files =
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
+extra_scripts =
+    ${esp32.extra_scripts}
 
 [esp32_4mb_v2]
 extends = exp32, arduino_esp32_v2
