--- a/.github/workflows/build_esp32.yaml
+++ b/.github/workflows/build_esp32.yaml
@@ -31,7 +31,6 @@ jobs:
           - ttgo-t7-v1.5_ili9341
           - wt32-sc01
           - yeacreate-nscreen32
-          - linux_sdl_64bits
 
     steps:
       - uses: actions/checkout@v2
@@ -55,17 +54,17 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade platformio
-      - name: Enable ESP platforms from platformio_override-template.ini
+      - name: Enable ESP32 platforms from platformio_override-template.ini
         run: |
-          sed 's/; user_setups\/esp/user_setups\/esp/g' platformio_override-template.ini > platformio_override.ini
-      - name: Enable Linux platform from platformio_override.ini
-        run: |
-          sed -i 's/; user_setups\/linux/user_setups\/linux/g' platformio_override.ini
-          mkdir -p .pio/libdeps/linux_sdl_64bits/paho/src
-      - name: Install SDL2 library
-        run: |
-          sudo apt-get update
-          sudo apt-get install libsdl2-dev
+          sed 's/; user_setups\/esp32/user_setups\/esp32/g' platformio_override-template.ini > platformio_override.ini
+      # - name: Enable Linux platform from platformio_override.ini
+      #   run: |
+      #     sed -i 's/; user_setups\/linux/user_setups\/linux/g' platformio_override.ini
+      #     mkdir -p .pio/libdeps/linux_sdl_64bits/paho/src
+      # - name: Install SDL2 library
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install libsdl2-dev
       - name: List all files in current folder
         run: |
           ls -la
