--- a/.github/workflows/build_esp32.yaml
+++ b/.github/workflows/build_esp32.yaml
@@ -18,8 +18,8 @@ jobs:
         environment:
           # - d1-mini-esp8266_ili9341
           - arduitouch-esp32_ili9341:
-            - env: arduitouch-esp32_ili9341
-            - out: arduitouch-esp32_ili9341
+            env: arduitouch-esp32_ili9341
+            out: arduitouch-esp32_ili9341
 
     steps:
       - uses: actions/checkout@v2
